--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -6,21 +6,21 @@
     { "code": 1734473681, "name": "Launch Codes", "type": "progression" },
 
     { "code": 1734473732, "name": "Spacesuit", "type": "progression" },
-    { "code": 1734473682, "name": "Translator", "type": "progression" },
-    { "code": 1734473683, "name": "Signalscope", "type": "progression" },
+    { "category": "base", "code": 1734473682, "name": "Translator", "type": "progression" },
+    { "category": "base", "code": 1734473683, "name": "Signalscope", "type": "progression" },
     { "code": 1734473684, "name": "Scout", "type": "progression" },
     { "code": 1734473685, "name": "Ghost Matter Wavelength", "type": "progression" },
-    { "code": 1734473687, "name": "Imaging Rule", "type": "progression" },
-    { "code": 1734473688, "name": "Nomai Warp Codes", "type": "progression" },
-    { "code": 1734473689, "name": "Warp Core Installation Manual", "type": "progression" },
-    { "code": 1734473690, "name": "Entanglement Rule", "type": "progression" },
-    { "code": 1734473691, "name": "Shrine Door Codes", "type": "progression" },
-    { "code": 1734473692, "name": "Tornado Aerodynamic Adjustments", "type": "progression" },
-    { "code": 1734473693, "name": "Silent Running Mode", "type": "progression" },
-    { "code": 1734473694, "name": "Electrical Insulation", "type": "progression" },
-    { "code": 1734473695, "name": "Coordinates", "type": "progression" },
+    { "category": "base", "code": 1734473687, "name": "Imaging Rule", "type": "progression" },
+    { "category": "base", "code": 1734473688, "name": "Nomai Warp Codes", "type": "progression" },
+    { "category": "base", "code": 1734473689, "name": "Warp Core Installation Manual", "type": "progression" },
+    { "category": "base", "code": 1734473690, "name": "Entanglement Rule", "type": "progression" },
+    { "category": "base", "code": 1734473691, "name": "Shrine Door Codes", "type": "progression" },
+    { "category": "base", "code": 1734473692, "name": "Tornado Aerodynamic Adjustments", "type": "progression" },
+    { "category": "base", "code": 1734473693, "name": "Silent Running Mode", "type": "progression" },
+    { "category": "base", "code": 1734473694, "name": "Electrical Insulation", "type": "progression" },
+    { "category": "base", "code": 1734473695, "name": "Coordinates", "type": "progression" },
 
-    { "code": 1734473697, "name": "Distress Beacon Frequency", "type": "progression" },
+    { "category": "base", "code": 1734473697, "name": "Distress Beacon Frequency", "type": "progression" },
     { "category": "base", "code": 1734473698, "name": "Quantum Fluctuations Frequency", "type": "progression" },
     { "category": "base", "code": 1734473699, "name": "Hide & Seek Frequency", "type": "progression" },
 
@@ -37,7 +37,7 @@
     { "category": "base", "code": 1734473710, "name": "Quantum Moon Signal", "type": "progression" },
     { "category": "base", "code": 1734473711, "name": "Escape Pod 1 Signal", "type": "filler" },
     { "category": "base", "code": 1734473712, "name": "Escape Pod 2 Signal", "type": "filler" },
-    { "code": 1734473713, "name": "Escape Pod 3 Signal", "type": "progression" },
+    { "category": "base", "code": 1734473713, "name": "Escape Pod 3 Signal", "type": "progression" },
     { "category": "base", "code": 1734473714, "name": "Galena's Radio Signal", "type": "filler" },
     { "category": "base", "code": 1734473715, "name": "Tephra's Radio Signal", "type": "filler" },
 
@@ -77,8 +77,8 @@
 
     { "category": "base", "code": null, "name": "Victory - Song of Five", "type": "progression" },
     { "category": "base", "code": null, "name": "Victory - Song of the Nomai", "type": "progression" },
-    { "category": "dlc", "code": null, "name": "Victory - Song of the Stranger", "type": "progression" },
-    { "category": "dlc", "code": null, "name": "Victory - Song of Six", "type": "progression" },
-    { "category": "dlc", "code": null, "name": "Victory - Song of Seven", "type": "progression" },
+    { "category": "base+dlc", "code": null, "name": "Victory - Song of the Stranger", "type": "progression" },
+    { "category": "base+dlc", "code": null, "name": "Victory - Song of Six", "type": "progression" },
+    { "category": "base+dlc", "code": null, "name": "Victory - Song of Seven", "type": "progression" },
     { "category": "dlc", "code": null, "name": "Victory - Echoes of the Eye", "type": "progression" }
 ]
