require Spacesuit to enter Stranger, since the hangar has no air and we don't have proper suitless Stranger logic (yet?)

--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -105,7 +105,7 @@
         { "item": "Spacesuit" } // to enter the Vessel
     ] },
 
-    { "category": "dlc", "from": "Space", "to": "Stranger Sunside Hangar", "requires": [] },
+    { "category": "dlc", "from": "Space", "to": "Stranger Sunside Hangar", "requires": [ { "item": "Spacesuit" } ] },
     { "category": "dlc", "from": "Stranger Sunside Hangar", "to": "Space", "requires": [ { "item": "Launch Codes" } ] },
 
     { "category": "dlc", "from": "Stranger Sunside Hangar", "to": "River Lowlands", "requires": [] },
