--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -66,7 +66,7 @@
     { "code": 1734473727, "name": "Audio Trap", "type": "trap" },
     { "code": 1734473728, "name": "Nap Trap", "type": "trap" },
 
-    { "category": "dlc", "code": 1734473733, "name": "Stranger Light Modulator", "type": "progression" },
+    { "category": "dlc|hn1", "code": 1734473733, "name": "Stranger Light Modulator", "type": "progression" },
     { "category": "dlc", "code": 1734473734, "name": "Breach Override Codes", "type": "progression" },
     { "category": "dlc", "code": 1734473735, "name": "River Lowlands Painting Code", "type": "progression" },
     { "category": "dlc", "code": 1734473736, "name": "Cinder Isles Painting Code", "type": "progression" },
@@ -86,5 +86,9 @@
     { "category": "base+dlc", "code": null, "name": "Victory - Song of the Stranger", "type": "progression" },
     { "category": "base+dlc", "code": null, "name": "Victory - Song of Six", "type": "progression" },
     { "category": "base+dlc", "code": null, "name": "Victory - Song of Seven", "type": "progression" },
-    { "category": "dlc", "code": null, "name": "Victory - Echoes of the Eye", "type": "progression" }
+    { "category": "dlc", "code": null, "name": "Victory - Echoes of the Eye", "type": "progression" },
+
+    { "category": "hn1", "code": 1734473752, "name": "Neighbor's Distress Signal Frequency", "type": "progression" },
+    { "category": "hn1", "code": 1734473753, "name": "Lava Core Signals Frequency", "type": "progression" },
+    { "category": "hn1", "code": 1734473754, "name": "Galactic Communication Frequency", "type": "progression" }
 ]
